--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -354,5 +354,8 @@
   "浜松市 中区": "中区",
   "浜松市 浜北区": "浜北区",
   "※退院は、保健所から報告があり、確認ができているものを反映": "※退院は、保健所から報告があり、確認ができているものを反映",
-  "※死亡退院を含む": "※死亡退院を含む"
+  "※死亡退院を含む": "※死亡退院を含む",
+  "はままつLINEコロナ身守りシステム": "はままつLINEコロナ身守りシステム",
+  "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "新型コロナウイルス接触確認アプリ COCOA (iPhone)",
+  "新型コロナウイルス接触確認アプリ COCOA (Android)": "新型コロナウイルス接触確認アプリ COCOA (Android)"
 }
