--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -361,5 +361,8 @@
   "感染の予防":"Phòng tránh lây nhiễm",
   "ひまわり":"hoa hướng dương",
   "※退院は、保健所から報告があり、確認ができているものを反映":"※退院は、保健所から報告があり、確認ができているものを反映",
-  "（注）医療機関が保険適用で行った検査は含まれていない":"(Chú ý) 医療機関が保険適用で行った検査は含まれていない"
+  "（注）医療機関が保険適用で行った検査は含まれていない":"(Chú ý) 医療機関が保険適用で行った検査は含まれていない",
+  "はままつLINEコロナ身守りシステム": "Hamamatsu City LINE Self-defense system for Covid-19",
+  "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "Contact Confirmation Application for Covid-19 COCOA (iPhone)",
+  "新型コロナウイルス接触確認アプリ COCOA (Android)": "Contact Confirmation Application for Covid-19 COCOA (Android)"
 }
