refs #516 additional localization

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -338,7 +338,7 @@
   "浜松市主催等 中止又は延期するイベント等": "浜松市主催等 中止又は延期するイベント等",
   "浜松市新型コロナウイルス感染症対策本部会議": "Hamamatsu city novel coronavirus infectious disease task force meeting (in Japanese)",
   "浜松市公式ホームページ": "Hamamatsu Municipal Homepage (in Japanese)",
-  "民間支援情報ナビ For 静岡県版": "Private Sector Support Information Navigator For Shizuoka Prefecture (in Japanese)",    
+  "民間支援情報ナビ For 静岡県版": "Private Sector Support Information Navigator For Shizuoka Prefecture (in Japanese)",
   "浜松市健康安全研究センター等": "浜松市健康安全研究センター等",
   "市内の最新感染動向": "Latest updates on COVID-19 in Hamamatsu",
   "市内発生（※1）": "市内発生（※1）",
@@ -355,6 +355,7 @@
   "浜松市 浜北区": "Hamakita-ku",
   "※退院は、保健所から報告があり、確認ができているものを反映": "* Discharged only includes cases reported and verified by public health centers",
   "※死亡退院を含む": "※ including death discharges",
+  "特別定額給付金事務局及び新型コロナコールセンター": "Special Cash Payment Office and COVID-19 Call Center",
   "はままつLINEコロナ身守りシステム": "Hamamatsu City LINE Self-defense system for Covid-19",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "Contact Confirmation Application for Covid-19 COCOA (iPhone)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "Contact Confirmation Application for Covid-19 COCOA (Android)"
