--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -361,6 +361,7 @@
   "浜松市 浜北区": "Hamakita-ku",
   "※退院は、保健所から報告があり、確認ができているものを反映": "※El alta refleja lo informado y confirmado por el centro de salud pública",
   "※死亡退院を含む": "※Incluyendo descarga de muerte",
+  "特別定額給付金事務局及び新型コロナコールセンター": "Centro de llamadas de la Oficina de Beneficio Especial Fijo tanto como del nuevo corona virus (COVID-19)",
   "はままつLINEコロナ身守りシステム": "Hamamatsu City LINE Self-defense system for Covid-19",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "Contact Confirmation Application for Covid-19 COCOA (iPhone)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "Contact Confirmation Application for Covid-19 COCOA (Android)"
