--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -355,6 +355,7 @@
   "浜松市 浜北区": "浜北区（はまきた く）",
   "※退院は、保健所から報告があり、確認ができているものを反映": "※退院（たいいん）した人（ひと）の かず は、保健所（ほけんじょ）から報告（ほうこく）されていて、確認（かくにん）ができたものを、かぞえています。",
   "※死亡退院を含む": "※死亡（しぼう）もふくむ",
+  "特別定額給付金事務局及び新型コロナコールセンター": "特別定額給付金事務局（とくべつていがくきゅうふきんじむきょく）、新型（しんがた）コロナコールセンター",
   "はままつLINEコロナ身守りシステム": "はままつLINE(ライン)コロナみまもりシステム",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "しんがたコロナウイルスせっしょくかくにんアプリ ココア (アイフォーン)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "しんがたコロナウイルスせっしょくかくにんアプリ ココア (アンドロイド)"
