--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -338,7 +338,7 @@
   "浜松市主催等 中止又は延期するイベント等": "浜松市主催等 中止又は延期するイベント等",
   "浜松市新型コロナウイルス感染症対策本部会議": "浜松市新型コロナウイルス感染症対策本部会議",
   "浜松市公式ホームページ": "浜松市公式ホームページ",
-  "民間支援情報ナビ For 静岡県版": "民間支援情報ナビ For 静岡県版",    
+  "民間支援情報ナビ For 静岡県版": "民間支援情報ナビ For 静岡県版",
   "浜松市健康安全研究センター等": "浜松市健康安全研究センター等",
   "市内の最新感染動向": "市内の最新感染動向",
   "市内発生（※1）": "市内発生（※1）",
@@ -355,6 +355,7 @@
   "浜松市 浜北区": "浜北区",
   "※退院は、保健所から報告があり、確認ができているものを反映": "※退院は、保健所から報告があり、確認ができているものを反映",
   "※死亡退院を含む": "※死亡退院を含む",
+  "特別定額給付金事務局及び新型コロナコールセンター": "特別定額給付金事務局及び新型コロナコールセンター",
   "はままつLINEコロナ身守りシステム": "はままつLINEコロナ身守りシステム",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "新型コロナウイルス接触確認アプリ COCOA (iPhone)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "新型コロナウイルス接触確認アプリ COCOA (Android)"
