--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -16,7 +16,7 @@
   "都庁来庁者数の推移": "Number of visitors to the Tokyo Metropolitan Government buildings",
   "テーブルを表示": "Show table",
   "都内発生（※1）": "Founds in Tokyo (*1)",
-  "※1: 疑い例・接触者調査": "*1:Casos suspeitos・averiguação de suspeitos ", 
+  "※1: 疑い例・接触者調査": "*1:Casos suspeitos・averiguação de suspeitos ",
   "その他（※2）": "Diversos（*2）",
   "※2: チャーター便・クルーズ船": "*2: Avião fretado・Navio cruzeiro",
   "{date}の累計": "Total{date} ",
@@ -172,7 +172,7 @@
   "menu/対策サイト": "Site para medidas",
   "最終更新": "Última atualização",
   "注釈": "Esta é uma tradução provisória e poderá conter equívocos.",
-  "print": "Imprimir", 
+  "print": "Imprimir",
   "サイドメニュー項目を開く": "Abrir menu",
   "サイドメニュー項目を閉じる": "Fechar menu",
   "お子様をお持ちの皆様へ": "Para família com criança",
@@ -339,7 +339,7 @@
   "浜松市": "Prefeitura de Hamamatsu",
   "詳細を見る（浜松市福祉保健局）": "詳細を見る（浜松市福祉保健局）",
   "平日・土日祝": "Dias úteis・final de semana e feriado",
-  "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。": "Antes de entrar em contato, favor verificar a página “Infecção pelo Novo Coronavírus” e adotar medidas necessárias.", 
+  "お電話の前に「新型コロナウイルス感染症について」のページをご覧いただき、必要な対応をご検討ください。": "Antes de entrar em contato, favor verificar a página “Infecção pelo Novo Coronavírus” e adotar medidas necessárias.",
   "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、市内IT技術者有志と浜松市が開設したものです。": "Este site foi criado pelos técnicos em tecnologia de informação (TI) e a prefeitura de Hamamatsu para fornecer informações atualizadas sobre o Novo Coronavírus (COVID-19)",
   "浜松市による公式情報と客観的な数値をわかりやすく伝えることで、浜松市にお住まいの方や、浜松市内に拠点を持つ企業の方、浜松市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "Para os munícipes, empresas, visitantes, entre outros, possam estar informados e adotar medidas necessárias, estamos empenhados em divulgar dados precisos de fácil compreensão. ",
   "当サイトに掲載されている情報の正確性については万全を期していますが、浜松市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "A prefeitura de Hamamatsu mantém o compromisso em garantir informações com precisão neste site, todavia se isenta de qualquer responsabilidade pela utilização direta ou indireta dos dados advindos deste site.",
@@ -349,7 +349,7 @@
   "浜松市主催等 中止又は延期するイベント等": "Cancelamento e prorrogação de eventos, etc. patrocinados pela prefeitura de Hamamatsu",
   "浜松市新型コロナウイルス感染症対策本部会議": "Reunião da Nova Sede de Controle de Infecção por Coronavírus da Cidade de Hamamatsu (em japonês)",
   "浜松市公式ホームページ": "Homepage da prefeitura de Hamamatsu",
-  "民間支援情報ナビ For 静岡県版": "Navegador de Informações de Apoio ao Setor Privado para a Província de Shizuoka (em japonês)",    
+  "民間支援情報ナビ For 静岡県版": "Navegador de Informações de Apoio ao Setor Privado para a Província de Shizuoka (em japonês)",
   "浜松市健康安全研究センター等": "Centro de pesquisa em saúde e segurança de Hamamatsu entre outros",
   "市内の最新感染動向": "Tendência de infecção no município",
   "市内発生（※1）": "Incidência no município（*1）",
@@ -360,12 +360,13 @@
   "都の備蓄マスク20万枚を市内全区市町村へ提供": "都の備蓄マスク20万枚を市内全区市町村へ提供",
   "市内医療機関及び保健所等へのマスクの配布について": "市内医療機関及び保健所等へのマスクの配布について",
   "市内発生": "市内発生",
-  "帰国者・接触者 電話相談センター": "",  
+  "帰国者・接触者 電話相談センター": "",
   "新型コロナウイルス感染症に関する相談件数": "Nº de consultas referente a infecção pelo Novo Coronavírus",
   "浜松市 中区": "Naka-ku",
   "浜松市 浜北区": "Hamakita-ku",
   "※退院は、保健所から報告があり、確認ができているものを反映": "* Discharged only includes cases reported and verified by public health centers",
   "※死亡退院を含む": "※ including death discharges",
+  "特別定額給付金事務局及び新型コロナコールセンター": "Secretaria de Auxílio Extraordinário de Valor Fixo e Novo Coronavírus Call Center",
   "はままつLINEコロナ身守りシステム": "Hamamatsu City LINE Self-defense system for Covid-19",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "Contact Confirmation Application for Covid-19 COCOA (iPhone)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "Contact Confirmation Application for Covid-19 COCOA (Android)"
