--- a/assets/locales/tl.json
+++ b/assets/locales/tl.json
@@ -366,7 +366,7 @@
   "浜松市 浜北区": "Hamakita-ku",
   "※退院は、保健所から報告があり、確認ができているものを反映": "* Discharged only includes cases reported and verified by public health centers",
   "※死亡退院を含む": "※ including death discharges",
-  "特別定額給付金事務局及び新型コロナコールセンター": "特別定額給付金事務局及び新型コロナコールセンター",
+  "特別定額給付金事務局及び新型コロナコールセンター": "Opisina para sa Special Fixed Benefit at New Corona Virus Infection（COVID-19）Call Ceter",
   "はままつLINEコロナ身守りシステム": "Hamamatsu City LINE Self-defense system for Covid-19",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "Contact Confirmation Application for Covid-19 COCOA (iPhone)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "Contact Confirmation Application for Covid-19 COCOA (Android)"
