--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -344,6 +344,7 @@
   "浜松市": "Thành phố Hamamatsu",
   "浜松市新型コロナウイルス感染症対策本部報": "Báo cáo của trụ sở chính về việc ứng phó với bệnh lây nhiễm COVID-19 thành phố Hamamatsu",
   "浜松市主催等 中止又は延期するイベント等": "Các sự kiện do thành phố Hamamatsu đăng cai phải dừng, hoặc lùi lại.",
+  "浜松市新型コロナウイルス感染症対策本部会議": "Cuộc họp của Trụ sở chính kiểm soát bệnh truyền nhiễm mới ở thành phố Hamamatsu",
   "浜松市公式ホームページ": "Trang web chính thức của thành phố Hamamatsu",
   "浜松市健康安全研究センター等": "Trung tâm nghiên cứu an toàn sức khỏe thành phố Hamamatsu...",
   "市内の最新感染動向": "u hướng nhiễm bệnh mới nhất của thành phố Hamamatsu",
@@ -362,6 +363,7 @@
   "ひまわり":"hoa hướng dương",
   "※退院は、保健所から報告があり、確認ができているものを反映":"※退院は、保健所から報告があり、確認ができているものを反映",
   "（注）医療機関が保険適用で行った検査は含まれていない":"(Chú ý) 医療機関が保険適用で行った検査は含まれていない",
+  "特別定額給付金事務局及び新型コロナコールセンター": "Văn phòng Tiền trợ cấp cố định đặc biệt và Tổng đài COVID-19",
   "はままつLINEコロナ身守りシステム": "Hamamatsu City LINE Self-defense system for Covid-19",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "Contact Confirmation Application for Covid-19 COCOA (iPhone)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "Contact Confirmation Application for Covid-19 COCOA (Android)"
