--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -355,6 +355,7 @@
   "浜松市 浜北区": "浜北区",
   "※退院は、保健所から報告があり、確認ができているものを反映": "※从保健所得到出院的报告，确认后予以公示",
   "※死亡退院を含む": "※死含死亡者出院",
+  "特別定額給付金事務局及び新型コロナコールセンター": "特别定额补足金事务所及新冠肺炎服务中心",
   "はままつLINEコロナ身守りシステム": "滨松市 LINE COVID-19 的自卫系统",
   "新型コロナウイルス接触確認アプリ COCOA (iPhone)": "联系确认申请 COVID-19 COCOA (iPhone)",
   "新型コロナウイルス接触確認アプリ COCOA (Android)": "联系确认申请 COVID-19 COCOA (Android)"
