--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -147,8 +147,8 @@
   "※土・日・祝日を除く庁舎開庁日の1週間累計数": "※土・日・祝日を除く庁舎開庁日の1週間累計数",
   "陽性者数": "Número de pacientes positivos",
   "(累計)": "(Acumulativo)",
-  "入院中": "Internado en el hospital",
-  "軽症・<br />中等症": "Leve・<br />Regular",
+  "入院・宿泊療養等": "Internado en el hospital, Receiving treatment at lodging facilities, etc",
+  "軽症・<br />中等症": "Leve・Regular",
   "重症": "Grave",
   "死亡": "Deceso",
   "退院": "Dar de alta",
