--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -150,8 +150,8 @@
   "※土・日・祝日を除く庁舎開庁日の1週間累計数": "* Weekly number of visitors on days the building was open to the public, excluding Sat., Sun., and holidays.",
   "陽性者数": "Casos confirmados",
   "(累計)": "(Total)",
-  "入院中": "Internados",
-  "軽症・<br />中等症": "Leve<br />moderado",
+  "入院・宿泊療養等": "Internados, Receiving treatment at lodging facilities, etc",
+  "軽症・<br />中等症": "Leve moderado",
   "重症": "Grave",
   "死亡": "Óbito",
   "退院": "Alta",
