--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -138,8 +138,8 @@
   "※土・日・祝日を除く庁舎開庁日の1週間累計数": "※土・日・祝日（ど・にち・しゅくじつ）を除（のぞ）く １週間（しゅうかん）で、 都庁（とちょう）が あいている日（ひ）に来（き）た 人（ひと） 全部（ぜんぶ）の 数（かず）",
   "陽性者数": "あたらしいコロナウイルスの病気（びょうき）になった 人について",
   "(累計)": "(ぜんぶで)",
-  "入院中": "病院（びょういん）に いる 人（ひと）",
-  "軽症・<br />中等症": "たいへん ではない",
+  "入院・宿泊療養等": "にゅういん・宿泊（しゅくはく）して やすむ",
+  "軽症・<br />中等症": "すこし たいへん",
   "重症": "たいへん",
   "死亡": "なくなりました",
   "退院": "なおったので いえに かえりました",
