--- a/assets/locales/tl.json
+++ b/assets/locales/tl.json
@@ -140,8 +140,8 @@
   "※土・日・祝日を除く庁舎開庁日の1週間累計数": "※土・日・祝日を除く庁舎開庁日の1週間累計数",
   "陽性者数": "Bilang ng positive",
   "(累計)": "(Total)",
-  "入院中": "In the hospital",
-  "軽症・<br />中等症": "Hindi Malala・<br />Katamtaman",
+  "入院・宿泊療養等": "In the hospital, Receiving treatment at lodging facilities, etc",
+  "軽症・<br />中等症": "Hindi Malala・Katamtaman",
   "重症": "Malala",
   "死亡": "namatay",
   "退院": "nakalabas ng ospital",
