refs#549 Tagalog translation

--- a/assets/locales/tl.json
+++ b/assets/locales/tl.json
@@ -7,14 +7,14 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Ikaw o kahit sino sa pamiya nag-aala sa mga sintomas ng nasabing Infection tumawag para makakonsulta po tayo",
   "相談の手順を見る": "Tignan ang pamamaraan ng konsultasyon",
   "検査陽性者の状況": "Status kung positive person",
-  "陽性患者数": "Bilang ng positive person",
-  "陽性患者の属性": "Attributes of positive patient ",
+  "陽性患者数": "Bilang ng positibong pasyente",
+  "陽性患者の属性": "Mga katangian ng positibong pasyente",
   "検査実施件数": "Bilang ng pagsusuri ",
   "新型コロナコールセンター相談件数": "新型コロナコールセンター相談件数",
   "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口相談件数",
   "都営地下鉄の利用者数の推移": "都営地下鉄の利用者数の推移",
   "都庁来庁者数の推移": "Paglipat ng bisita",
-  "テーブルを表示": "Ipakita ang mesa",
+  "テーブルを表示": "Table ng talaan",
   "都内発生（※1）": "Outbreak sa City（※1）",
   "※1: 疑い例・接触者調査": "※1:halimbawa ng pinaghihinalaang ・infected person check",
   "その他（※2）": "At iba pa（※2）",
@@ -26,7 +26,7 @@
   "2月10日~14日": "2月10日~14日",
   "2月17日~21日": "2月17日~21日",
   "2月25日~28日": "2月25日~28日",
-  "人": "Person",
+  "人": "katao",
   "件": {
     "tested": "tested",
     "reports": "reports"
@@ -138,7 +138,7 @@
   "第二庁舎計": "第二庁舎計",
   "議事堂計": "議事堂計",
   "※土・日・祝日を除く庁舎開庁日の1週間累計数": "※土・日・祝日を除く庁舎開庁日の1週間累計数",
-  "陽性者数": "Bilang ng positive",
+  "陽性者数": "Positibong pasyente",
   "(累計)": "(Total)",
   "入院中": "In the hospital",
   "軽症・<br />中等症": "Hindi Malala・<br />Katamtaman",
@@ -179,8 +179,8 @@
   "累計値": "Cumulative Value",
   "前日比": "Previous day",
   "（注）都内において疑い例または患者の濃厚接触者として検査を行ったものについて掲載": "（note）Post about the suspected case sa City or a person who was tested as a concentrated contact sa pasyente o may posibilidad na nahawahan ",
-  "（チャーター機帰国者、クルーズ船乗客等は含まれていない）": "（Returnees sa  pasahero ng eroplano, Hindi kabilang ang pasahero ng barko",
-  "検査実施人数は、速報値として公開するものであり、後日確定データとして修正される場合があります": "Bilang ng tao to be inspected at pangmadaliang pagpapahayag ng resulta nito,however it may be revised as finalized data athe later date",
+  "（チャーター機帰国者、クルーズ船乗客等は含まれていない）": "Returnees sa pasahero ng eroplano,hindi kabilang ang pasahero ng barko",
+  "検査実施人数は、速報値として公開するものであり、後日確定データとして修正される場合があります": "Note Bilang ng tao to be inspected at pangmadaliang pagpapaphayag ng resulta nito however it may be revised as finalized data at the later data",
   "（注）同一の対象者について複数の検体を検査する場合あり": "（note）multiple samples may be tested for the same subject.",
   "合計": "total",
   "{date}の全体累計": "%{date}kabuuang total",
@@ -191,7 +191,7 @@
   "新型コロナウイルス感染症にかかる相談窓口について": "New Corona Virus Infection Consultation counter para sa Infectious diseases",
   "{advisory}による相談結果": "{advisory} Resulta ng konsulta sa",
   "新型コロナ受診相談窓口": "New corona Virus Infection consultation counter",
-  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※Kung kailangan gugamit ng health inssurances sa pagsusuri,upang maiwasan ang pagkalat ng infection matagaal na panahon ang gagamitin upang magamit ito sa  pagpapagalin. At upang maiwasan ang pagkalat nito kabilang dito ang「returnee・contact person outsider」o pagpapagaling na panahon",
+  "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※ Kung kailangang gumamit ng heath insurance sa pagsusuri upang maiwasan ang pagkalat ng infection matagal na panahon ang gagamitin upang magamit ito sa pagpapagaling,At upang maiwasan ang pagkalat nito kabilang dito ang returnee. May malapit na pakikipag-ugnayan dito at sa taga ibang lugar sa pagpapagaling na panahon",
   "新型コロナ受診相談窓口（日本語のみ）": "New Corona Virus Consultation desk",
   "浜松市帰国者・接触者 電話相談センター": "Hamamtsu-shi returnee・contact person o call center",
   "24時間対応": "Open 24oras",
@@ -203,8 +203,8 @@
   "土日祝 終日": "weekends holiday",
   "専門的な助言が必要な場合": "Sa mga nangangailangan ng espesyal",
   "入院となります": " na payo kaialngannatin ng inn hospital",
-  "感染症指定医療機関等": "Inffected deasease medical meditation time",
-  "一般の方": "Ordinary person",
+  "感染症指定医療機関等": "Nakakahawang sakit na itinalagang institusyong medikal Atbp",
+  "一般の方": "Ordinaryong tao",
   "{duration}続いている": "{duration}patuloy-tuloy",
   "{day}日以上": "{day}day or more",
   "{day}日程度": "{day}day after",
@@ -216,7 +216,7 @@
   "強いだるさ": "Matinding pananamlay",
   "息苦しさ": "Pagsisikip ng hininga",
   "ご高齢な方": "Sa mga may edad",
-  "基礎疾患のある方": "Underlying disease",
+  "基礎疾患のある方": "Sa may mga kapansanan",
   "妊娠中の方": "nagdadalang tao",
   "新型コロナ外来 {advice} と判断された場合": "New corona virus outpatient {advice}possitive",
   "受診が不要": "Di kailangan ng in-hospital",
@@ -224,12 +224,12 @@
   "症状が良くならない場合は": "Sintomas na hindi gumagaling",
   "自宅で安静に過ごす": "Manatili sa tahanan",
   "一般の医療機関を受診": "Regular na pagamutan",
-  "{past}の出来ごとと症状": "g isang lingo{past}mga sintomas",
+  "{past}の出来ごとと症状": "Mga kaganapan at sintomas sa loob ng {past} lingo bago magsimula",
   "発症前{two}週間以内": "Bago ma-detect (two) sa loob n",
-  "「新型コロナウイルス感染者」と": "「New Corona Virus Infecyed person」",
+  "「新型コロナウイルス感染者」と": "「New corona virus infected person」",
   "{closeContact}をした方": "at contact person  {closeContact}ang pagalis o paglipat ng luga",
   "濃厚接触": "Contact person",
-  "流行地域への渡航・居住歴がある方": "Ay kailangan itala",
+  "流行地域への渡航・居住歴がある方": "Naninirahan o pumasyal sa lugar na endemic area",
   "{you} か {closeContact}をした方": "{you} ay {closeContact}ng nasabing ito",
   "travel history from {area}": "travel history from {area}",
   "COVID-19 prevalent area": "COVID-19 prevalent area",
@@ -255,7 +255,7 @@
   "不安に思う方": "Sa mga hindi nangangailangan",
   "微熱": "sinat",
   "軽い咳": "light cought",
-  "感染の不安": "No infection required",
+  "感染の不安": "Pag-aalala sa impeksyon",
   "感染の予防": "Pag-iwas sa impeksyon",
   "新型コロナコールセンター": "新型コロナコールセンター",
   "午前9時から午後9時（土日祝含む）": "Alas 9 ng umaga hanggang alas 9 ng gabi（Including Weekdays ang Holiday",
@@ -302,9 +302,9 @@
   "交通局": "交通局",
   "（都営交通お客様センター）": "（都営交通お客様センター）",
   "検査実施人数": "Bilang ng mga pagsusuri",
-  "（注）医療機関が保険適用で行った検査は含まれていない": "（note）Hindi kasama ang mga pagsusuri na isinasagawa ng mga institusyong medikal sa ilalim ng saklaw ng seguro.",
-  "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "Returnees sa  pasahero ng eroplano, Hindi kabilang ang pasahero ng barko",
-  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "（note）Bilang ng tao to be inspected at pangmadaliang pagpapahayag ng resulta nito,however it may be revised as finalized data athe later date.",
+  "（注）医療機関が保険適用で行った検査は含まれていない": "（note）Hindi kasama ang mga pagsusuri na isinasagawa ng mga institusyong medikal sa ilalim na saklaw pagsusuri.",
+  "（注）チャーター機帰国者、クルーズ船乗客等は含まれていない": "Returnees sa pasahero ng eroplano,hindi kabilang ang pasahero ng barko",
+  "（注）速報値として公開するものであり、後日確定データとして修正される場合あり": "Note Bilang ng tao to be inspected at pangmadaliang pagpapaphayag ng resulta nito however it may be revised as finalized data at the later data.",
   "都外": "都外",
   "新宿区エリアの来訪者推移（参考値）": "新宿区エリアの来訪者推移（参考値）",
   "千代田区エリアの来訪者推移（参考値）": "千代田区エリアの来訪者推移（参考値）",
@@ -318,7 +318,7 @@
   "検査実施状況": "検査実施状況",
   "都内発生": "都内発生",
   "（チャーター機・クルーズ船等）": "（チャーター機・クルーズ船等）",
-  "（注）検査実施人数には、チャーター機帰国者、クルーズ船乗客等は含まれていない": "（note）Returnees sa  pasahero ng eroplano, Hindi kabilang ang pasahero ng barko",
+  "（注）検査実施人数には、チャーター機帰国者、クルーズ船乗客等は含まれていない": "（note）Returnees sa pasahero ng eroplano,hindi kabilang ang pasahero ng barko",
   "{title}のグラフをシェア": "{title} graph share",
   "閉じる": "Close",
   "クリップボードにコピー": "Clipboard copy",
@@ -339,11 +339,11 @@
   "浜松市生活文化局広報広聴部広報課": "Hamamatsu-City Planning Adjustment Department Publisher",
   "浜松市新型コロナウイルス感染症対策本部報": "Hamamatsu-City New Corona Virus Infection Control Headquarters Report",
   "浜松市主催等 中止又は延期するイベント等": "Hamammatsu-City sponsored events etc. cancelled, postponed",
-  "浜松市新型コロナウイルス感染症対策本部会議": "Ang Hamamatsu City New Coronavirus Nakakahawang Nakakahawang Pagpupulong ng Punong Pangkalahatang Pagpupulong",
+  "浜松市新型コロナウイルス感染症対策本部会議": "Pagpupulong ng Punong Pangkomunidadsa Hamamatsu City ukol sa New Coronavirus Infection",
   "浜松市公式ホームページ": "Hamamatsu-City official Homepage",
   "民間支援情報ナビ For 静岡県版": "民間支援情報ナビ For 静岡県版",
   "浜松市健康安全研究センター等": "Hamamatsu Health and Safety Research Center",
-  "市内の最新感染動向": "Latest Infection and trend sa City",
+  "市内の最新感染動向": "Pinakabagong video ng impeksyon sa lunsod",
   "市内発生（※1）": "Outbreak in the City（※1）",
   "市内": "Lunsod",
   "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。": "感染症の拡大を理由として、国の雇用調整助成金等を活用し、非常時における勤務体制づくりなど職場環境整備に取り組む市内中小企業に奨励金を支給します（1事業所10万円）。",
@@ -356,7 +356,7 @@
   "新型コロナウイルス感染症に関する相談件数": "Bilang ng konsultasyon regarding sa New Corona Virus Infection Desease",
   "浜松市 中区": "中区",
   "浜松市 浜北区": "浜北区",
-  "※退院は、保健所から報告があり、確認ができているものを反映": "※Sinasalamin ng Discharge kung ano ang naiulat at nakumpirma ng sentro ng kalusugan ng publiko",
+  "※退院は、保健所から報告があり、確認ができているものを反映": "※ Ang paglabas sa ospital ay iuulat mula sa Sentro ng kulusugang Pampubliko",
   "※死亡退院を含む": "※inilabas ng Ospital dahil namatay",
   "特別定額給付金事務局及び新型コロナコールセンター": "Opisina para sa Special Fixed Benefit at New Corona Virus Infection（COVID-19）Call Ceter",
   "はままつLINEコロナ身守りシステム": "Hamamatsu City LINE Self-defense system for Covid-19",
