軽症・中等症 + 無症状

--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -139,7 +139,7 @@
   "陽性者数": "あたらしいコロナウイルスの病気（びょうき）になった 人について",
   "(累計)": "(ぜんぶで)",
   "入院・宿泊療養等": "にゅういん・宿泊（しゅくはく）して やすむ",
-  "軽症・<br />中等症": "すこし たいへん",
+  "軽症・<br />中等症": "すこし たいへん・しょうじょうが ない",
   "重症": "たいへん",
   "死亡": "なくなりました",
   "退院": "なおったので いえに かえりました",
