--- a/assets/locales/tl.json
+++ b/assets/locales/tl.json
@@ -141,7 +141,7 @@
   "陽性者数": "Bilang ng positive",
   "(累計)": "(Total)",
   "入院・宿泊療養等": "In the hospital, Receiving treatment at lodging facilities, etc",
-  "軽症・<br />中等症": "Hindi Malala・Katamtaman",
+  "軽症・<br />中等症": "Hindi Malala・Katamtaman・Asymptomatic",
   "重症": "Malala",
   "死亡": "namatay",
   "退院": "nakalabas ng ospital",
