--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -139,7 +139,7 @@
   "陽性者数": "陽性者数",
   "(累計)": "(累计)",
   "入院・宿泊療養等": "正在住院中, 酒店疗养 等",
-  "軽症・<br />中等症": "轻度症状・中等症状",
+  "軽症・<br />中等症": "轻度症状・中等症状・無症状",
   "重症": "重症",
   "死亡": "死亡",
   "退院": "出院",
