--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -139,7 +139,7 @@
   "陽性者数": "Total number of people testing positive",
   "(累計)": "(Total)",
   "入院・宿泊療養等": "Hospitalized, Receiving treatment at lodging facilities, etc",
-  "軽症・<br />中等症": "Mild to moderate symptoms",
+  "軽症・<br />中等症": "Mild-moderate・Asymptomatic",
   "重症": "Severe symptoms",
   "死亡": "Deaths",
   "退院": "Discharged",
