--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -148,7 +148,7 @@
   "陽性者数": "Número de pacientes positivos",
   "(累計)": "(Acumulativo)",
   "入院・宿泊療養等": "Internado en el hospital, Receiving treatment at lodging facilities, etc",
-  "軽症・<br />中等症": "Leve・Regular",
+  "軽症・<br />中等症": "Leve・Regular・Sin Síntomas",
   "重症": "Grave",
   "死亡": "Deceso",
   "退院": "Dar de alta",
