--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -139,7 +139,7 @@
   "陽性者数": "陽性者数",
   "(累計)": "(累計)",
   "入院・宿泊療養等": "入院・宿泊療養等",
-  "軽症・<br />中等症": "軽症・中等症",
+  "軽症・<br />中等症": "軽症・中等症・無症状",
   "重症": "重症",
   "死亡": "死亡",
   "退院": "退院",
