--- a/assets/locales/pt_BR.json
+++ b/assets/locales/pt_BR.json
@@ -151,7 +151,7 @@
   "陽性者数": "Casos confirmados",
   "(累計)": "(Total)",
   "入院・宿泊療養等": "Internados, Receiving treatment at lodging facilities, etc",
-  "軽症・<br />中等症": "Leve moderado",
+  "軽症・<br />中等症": "Leve moderado, Sem sintomas",
   "重症": "Grave",
   "死亡": "Óbito",
   "退院": "Alta",
