--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -153,7 +153,7 @@
   "陽性者数": "Số ca dương tính",
   "(累計)": "(Thống kê)",
   "入院・宿泊療養等": "Số ca nhập viện, Receiving treatment at lodging facilities, etc",
-  "軽症・<br />中等症": "Triệu chứng vừa và nhẹ",
+  "軽症・<br />中等症": "Triệu chứng vừa và nhẹ, Không có triệu chứng",
   "重症": "Triệu chứng nặng",
   "死亡": "Tử vong",
   "退院": "Xuất viện",
